Tue Sep 16 22:09:50 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (keyword->symbol, display-usage-report): Changed
 	length --> string-length.  (Thanks to Aleksandar Bakic.)
	(separate-fields-discarding-char, separate-fields-after-char,
 	separate-fields-before-char): Bugfix from Maciej Stachowiak
	<mstachow@mit.edu>.  Thanks!

Mon Sep 15 23:39:54 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (iota): Renamed list-reverse! --> reverse!

Thu Sep 11 02:31:38 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* session.scm (name): New procedure: Gives name of object.
	(source): New procedure: Gives source of object.

Wed Sep 10 20:12:45 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

*	* boot-9.scm (primitive-macro?): New procedure.

	* slib.scm: Added hack which transfers syntactic information from
	the builtin variable `define' to the slib version if module (ice-9
	syncase) has been loaded.  This is necessary to get correct
	expansion inside the slib module.

	* psyntax.ss (build-let, build-named-let): New output
 	constructors.
	(build-lexical-var): Seed gensym with symbolic name.
	(self-evaluating?): Add keywords among self-evaluating types.
	(let): New core form.
	(if): Removed from core language.
	(or, and, let, cond): Removed syntactic definitions.
	(sc-expand3): New procedure: Expander which takes optional mode
 	and eval-syntactic-expanders-when arguments.

	* syncase.scm (psyncomp): New procedure: Recompiles psyntax.pp.
	Should be used inside the (ice-9 syncase) module with (use-syntax
	syncase) and with the current directory containing the psyntax.ss
	source.
	Added hack to transfer syntactic information from the builtin
	variable `define' to the slib version if module (ice-9 slib) has
	been loaded.
	
Fri Sep  5 05:47:36 1997  Mikael Djurfeldt  <mdj@faun.nada.kth.se>

	* syncase.scm (sc-interface, sc-expand): Removed hook setup.
	(syncase): Publish syntax transformer to be used with
	`use-syntax'.